--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dashkite/graphite",
+  "name": "@dashkite/sky-presets",
   "version": "0.0.0",
-  "description": "Graph Database For DynamoDB",
+  "description": "Genie presets for Sky APIs",
   "exports": {
     ".": {
       "node": "./build/node/src/index.js"
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dashkite/graphite.git"
+    "url": "git+https://github.com/dashkite/sky-presets.git"
   },
   "keywords": [],
   "contributors": [
@@ -31,13 +31,16 @@
   ],
   "license": "SEE LICENSE IN LICENSE.md",
   "bugs": {
-    "url": "https://github.com/dashkite/dolores/issues"
+    "url": "https://github.com/dashkite/sky-presets/issues"
   },
-  "homepage": "https://github.com/dashkite/dolores#readme",
+  "homepage": "https://github.com/dashkite/sky-presets#readme",
   "devDependencies": {
     "@dashkite/genie": "^0.5.4",
     "@dashkite/genie-presets": "^0.5.2"
   },
   "dependencies": {
+    "@dashkite/dolores": "file:../dolores",
+    "@dashkite/masonry": "^0.12.2",
+    "panda-confidential": "^3.1.0"
   }
 }
