--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "dependencies": {
     "@dashkite/dolores": "file:../dolores",
     "@dashkite/masonry": "^0.12.2",
+    "@dashkite/sky-alb": "file:../sky-alb",
+    "js-yaml": "^4.1.0",
     "panda-confidential": "^3.1.1"
   }
 }
