--- a/genie.yaml
+++ b/genie.yaml
@@ -9,3 +9,6 @@ presets:
         - preset: node
           glob:
             - '{src,test}/**/*.coffee'
+  media:
+    glob: 'src/**/*.hbs'
+    target: build/node
