--- a/package.json
+++ b/package.json
@@ -42,7 +42,12 @@
     "@dashkite/dolores": "file:../dolores",
     "@dashkite/masonry": "^0.12.2",
     "@dashkite/sky-alb": "file:../sky-alb",
+    "@dashkite/template": "file:../template",
+    "coffee-loader": "^3.0.0",
     "js-yaml": "^4.1.0",
-    "panda-confidential": "^3.1.1"
+    "panda-confidential": "^3.1.1",
+    "pug-loader": "^2.4.0",
+    "webpack": "^5.64.1",
+    "yaml-loader": "^0.6.0"
   }
 }
