--- a/package.json
+++ b/package.json
@@ -35,19 +35,19 @@
   },
   "homepage": "https://github.com/dashkite/sky-presets#readme",
   "devDependencies": {
-    "@dashkite/genie": "^0.5.4",
-    "@dashkite/genie-presets": "^0.5.2"
+    "@dashkite/genie": "^0.5.6",
+    "@dashkite/genie-presets": "^0.5.4"
   },
   "dependencies": {
-    "@dashkite/dolores": "file:../dolores",
+    "@dashkite/dolores": "^0.0.1",
     "@dashkite/masonry": "^0.12.2",
-    "@dashkite/sky-alb": "file:../sky-alb",
-    "@dashkite/template": "file:../template",
+    "@dashkite/sky-alb": "^0.0.1",
+    "@dashkite/template": "^0.0.1",
     "coffee-loader": "^3.0.0",
     "js-yaml": "^4.1.0",
-    "panda-confidential": "^3.1.1",
+    "panda-confidential": "^3.1.2",
     "pug-loader": "^2.4.0",
-    "webpack": "^5.64.1",
+    "webpack": "^5.64.4",
     "yaml-loader": "^0.6.0"
   }
 }
