extend webpack support, prompt for secrets

--- a/package.json
+++ b/package.json
@@ -39,14 +39,18 @@
     "@dashkite/genie-presets": "^0.5.4"
   },
   "dependencies": {
-    "@dashkite/dolores": "^0.0.1",
+    "@dashkite/dolores": "file:../dolores",
     "@dashkite/masonry": "^0.12.2",
     "@dashkite/sky-alb": "^0.0.2",
     "@dashkite/template": "^0.0.1",
     "coffee-loader": "^3.0.0",
+    "css-loader": "^6.5.1",
     "js-yaml": "^4.1.0",
     "panda-confidential": "^3.1.2",
+    "prompts": "^2.4.2",
     "pug-loader": "^2.4.0",
+    "raw-loader": "^4.0.2",
+    "stylus-loader": "^6.2.0",
     "webpack": "^5.64.4",
     "yaml-loader": "^0.6.0"
   }
