--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@dashkite/genie-presets": "^0.5.6"
   },
   "dependencies": {
-    "@dashkite/dolores": "file:../dolores",
+    "@dashkite/dolores": "^0.0.3",
     "@dashkite/masonry": "^0.12.3",
     "@dashkite/sky-alb": "^0.0.2",
     "@dashkite/template": "^0.0.1",
@@ -51,7 +51,7 @@
     "pug-loader": "^2.4.0",
     "raw-loader": "^4.0.2",
     "stylus-loader": "^6.2.0",
-    "webpack": "^5.65.0",
+    "webpack": "^5.67.0",
     "yaml-loader": "^0.6.0"
   }
 }
