--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@dashkite/genie-presets": "^0.5.7"
   },
   "dependencies": {
+    "@dashkite/bake": "^0.0.6",
     "@dashkite/dolores": "file:../dolores",
-    "@dashkite/masonry": "^0.12.4",
+    "@dashkite/masonry": "file:../masonry",
     "@dashkite/sky-alb": "^0.0.3",
     "@dashkite/template": "^0.0.1",
     "coffee-loader": "^3.0.0",
