--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prompts": "^2.4.2",
     "pug-loader": "^2.4.0",
     "raw-loader": "^4.0.2",
+    "source-map-loader": "^4.0.0",
     "stylus-loader": "^6.2.0",
     "webpack": "^5.68.0",
     "yaml-loader": "^0.6.0"
