--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@dashkite/messages": "file:../messages",
     "@dashkite/sky-alb": "^0.0.3",
     "@dashkite/template": "^0.0.1",
+    "brotli": "^1.3.3",
     "coffee-loader": "^3.0.0",
     "css-loader": "^6.6.0",
     "js-yaml": "^4.1.0",
@@ -56,6 +57,7 @@
     "pug-loader": "^2.4.0",
     "raw-loader": "^4.0.2",
     "source-map-loader": "^4.0.0",
+    "sprintf-js": "^1.1.2",
     "stylus-loader": "^6.2.0",
     "webpack": "^5.68.0",
     "yaml-loader": "^0.6.0"
