schema validation updates

--- a/package.json
+++ b/package.json
@@ -41,11 +41,15 @@
   "dependencies": {
     "@dashkite/bake": "^0.0.6",
     "@dashkite/dolores": "file:../dolores",
+    "@dashkite/enchant": "file:../enchant",
     "@dashkite/graphene-core": "file:../graphene-core",
     "@dashkite/masonry": "file:../masonry",
     "@dashkite/messages": "file:../messages",
+    "@dashkite/runes": "file:../runes",
     "@dashkite/sky-alb": "^0.0.3",
+    "@dashkite/sky-api-description": "file:../sky-api-description",
     "@dashkite/template": "^0.0.1",
+    "ajv": "^8.11.0",
     "brotli": "^1.3.3",
     "coffee-loader": "^3.0.0",
     "css-loader": "^6.6.0",
