--- a/package.json
+++ b/package.json
@@ -55,13 +55,17 @@
     "coffee-loader": "^3.0.0",
     "css-loader": "^6.6.0",
     "esbuild": "^0.15.18",
+    "glob": "^8.0.3",
     "js-yaml": "^4.1.0",
+    "jszip": "^3.10.1",
+    "make-fetch-happen": "^9.1.0",
     "mime-types": "^2.1.35",
     "node-fetch": "^2.6.7",
     "panda-confidential": "^3.1.2",
     "prompts": "^2.4.2",
     "pug-loader": "^2.4.0",
     "raw-loader": "^4.0.2",
+    "semver": "^7.3.8",
     "source-map-loader": "^4.0.0",
     "sprintf-js": "^1.1.2",
     "stylus-loader": "^6.2.0",
