--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     {
       "name": "David Harper",
       "email": "david@dashkite.com"
+    },
+    {
+      "name": "Chand Rajendra-Nicolucci",
+      "email": "chand@dashkite.com"
     }
   ],
   "license": "SEE LICENSE IN LICENSE.md",
