--- a/package.json
+++ b/package.json
@@ -39,21 +39,21 @@
   },
   "homepage": "https://github.com/dashkite/sky-presets#readme",
   "devDependencies": {
-    "@dashkite/atlas": "file:../atlas",
+    "@dashkite/atlas": "link:../atlas",
     "@dashkite/genie": "^0.5.11",
     "@dashkite/genie-presets": "^0.5.7"
   },
   "dependencies": {
     "@dashkite/bake": "^0.0.6",
-    "@dashkite/dolores": "file:../dolores",
-    "@dashkite/enchant": "file:../enchant",
-    "@dashkite/graphene-core": "file:../graphene-core",
-    "@dashkite/masonry": "file:../masonry",
-    "@dashkite/messages": "file:../messages",
-    "@dashkite/polaris": "file:../polaris",
-    "@dashkite/runes": "file:../runes",
+    "@dashkite/dolores": "link:../dolores",
+    "@dashkite/enchant": "link:../enchant",
+    "@dashkite/graphene-core": "link:../graphene-core",
+    "@dashkite/masonry": "link:../masonry",
+    "@dashkite/messages": "link:../messages",
+    "@dashkite/polaris": "link:../polaris",
+    "@dashkite/runes": "link:../runes",
     "@dashkite/sky-alb": "^0.0.3",
-    "@dashkite/sky-api-description": "file:../sky-api-description",
+    "@dashkite/sky-api-description": "link:../sky-api-description",
     "@dashkite/template": "^0.0.1",
     "ajv": "^8.11.0",
     "brotli": "^1.3.3",
