--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@dashkite/dolores": "link:../dolores",
     "@dashkite/enchant": "link:../enchant",
     "@dashkite/graphene-core": "link:../graphene-core",
+    "@dashkite/joy": "^0.3.16",
     "@dashkite/masonry": "link:../masonry",
     "@dashkite/messages": "link:../messages",
     "@dashkite/polaris": "link:../polaris",
@@ -72,6 +73,7 @@
     "pug-loader": "^2.4.0",
     "raw-loader": "^4.0.2",
     "semver": "^7.3.8",
+    "sort-package-json": "1",
     "source-map-loader": "^4.0.0",
     "sprintf-js": "^1.1.2",
     "stylus-loader": "^6.2.0",
