--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "exports": {
     ".": {
       "node": "./build/node/src/index.js"
+    },
+    "./mixins": {
+      "node": "./build/node/src/mixins.js"
     }
   },
   "main": "build/node/src/index.js",
@@ -53,6 +56,7 @@
     "@dashkite/katana": "^0.4.8",
     "@dashkite/masonry": "link:../masonry",
     "@dashkite/messages": "link:../messages",
+    "@dashkite/name": "link:../name",
     "@dashkite/polaris": "link:../polaris",
     "@dashkite/runes": "link:../runes",
     "@dashkite/sky-alb": "^0.0.3",
@@ -63,6 +67,7 @@
     "coffee-loader": "^3.0.0",
     "css-loader": "^6.6.0",
     "esbuild": "^0.15.18",
+    "execa": "5.1.1",
     "glob": "^8.0.3",
     "js-yaml": "^4.1.0",
     "jszip": "^3.10.1",
