--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
   "homepage": "https://github.com/dashkite/sky-presets#readme",
   "devDependencies": {
     "@dashkite/atlas": "link:../atlas",
-    "@dashkite/genie": "link:../genie",
-    "@dashkite/genie-presets": "link:../genie-presets"
+    "@dashkite/genie": "link:../genie"
   },
   "dependencies": {
     "@dashkite/bake": "^0.0.6",
