--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dashkite/sky-presets",
+  "name": "@dashkite/genie-sky",
   "version": "0.2.2",
   "description": "Genie presets for Sky APIs",
   "exports": {
@@ -40,9 +40,10 @@
   },
   "homepage": "https://github.com/dashkite/sky-presets#readme",
   "devDependencies": {
-    "@dashkite/atlas": "link:../atlas",
-    "@dashkite/genie": "^0.5.11",
-    "@dashkite/genie-presets": "^0.5.7"
+    "@dashkite/genie": "link:../genie",
+    "@dashkite/genie-coffee": "link:../genie-coffee",
+    "@dashkite/genie-media": "link:../genie-media",
+    "@dashkite/genie-yaml": "link:../genie-yaml"
   },
   "dependencies": {
     "@dashkite/bake": "^0.0.6",
