--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
       "node": "./build/node/src/index.js"
     }
   },
+  "imports": {
+    "#helpers/*": "./build/node/src/helpers/runner.js"
+  },
   "main": "build/node/src/index.js",
   "files": [
     "build/node/src"
@@ -61,6 +64,7 @@
     "@dashkite/sky-alb": "^0.0.3",
     "@dashkite/sky-api-description": "link:../sky-api-description",
     "@dashkite/template": "^0.0.1",
+    "@dashkite/zephyr": "link:../zephyr",
     "ajv": "^8.11.0",
     "brotli": "^1.3.3",
     "coffee-loader": "^3.0.0",
