--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
     "@dashkite/drn-sky": "link:../drn-sky",
     "@dashkite/enchant": "link:../enchant",
     "@dashkite/graphene-core": "link:../graphene-core",
-    "@dashkite/joy": "^0.3.16",
+    "@dashkite/joy": "link:../joy",
     "@dashkite/katana": "^0.4.8",
     "@dashkite/masonry": "link:../masonry",
+    "@dashkite/masonry-targets": "link:../masonry-targets",
     "@dashkite/messages": "link:../messages",
     "@dashkite/name": "link:../name",
     "@dashkite/polaris": "link:../polaris",
