--- a/src/s3/website.yaml
+++ b/src/s3/website.yaml
@@ -6,4 +6,4 @@ Statement:
   Action: 
     - s3:GetObject
     - s3:GetObjectVersion
-  Resource: arn:aws:s3:::${ bucket.name }/*
+  Resource: arn:aws:s3:::${ bucket.domain }/*
