baseline origin request router

--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "@dashkite/joy": "link:../joy",
     "@dashkite/katana": "^0.4.8",
     "@dashkite/masonry": "link:../masonry",
+    "@dashkite/masonry-export": "link:../masonry-export",
     "@dashkite/masonry-module": "link:../masonry-module",
     "@dashkite/masonry-targets": "link:../masonry-targets",
     "@dashkite/masonry-watch": "link:../masonry-watch",
+    "@dashkite/masonry-yaml": "link:../masonry-yaml",
     "@dashkite/messages": "link:../messages",
     "@dashkite/name": "link:../name",
     "@dashkite/polaris": "link:../polaris",
