--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ajv": "^8.11.0",
     "brotli": "^1.3.3",
     "coffee-loader": "^3.0.0",
+    "coffeescript": "^2.7.0",
     "css-loader": "^6.6.0",
     "esbuild": "^0.15.18",
     "execa": "5.1.1",
