--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "source-map-loader": "^4.0.0",
     "sprintf-js": "^1.1.2",
     "stylus-loader": "^6.2.0",
+    "terminal-kit": "^3.0.1",
     "webpack": "^5.68.0",
     "yaml-loader": "^0.6.0"
   }
