--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "@dashkite/name": "link:../name",
     "@dashkite/polaris": "link:../polaris",
     "@dashkite/runes": "link:../runes",
+    "@dashkite/scout": "link:../sky-api-description",
     "@dashkite/sky-alb": "^0.0.3",
-    "@dashkite/sky-api-description": "link:../sky-api-description",
     "@dashkite/sky-local-storage": "link:../sky-local-storage",
     "@dashkite/template": "^0.0.1",
     "@dashkite/zephyr": "link:../zephyr",
